--- a/project/crumpling_sim/index.html
+++ b/project/crumpling_sim/index.html
@@ -30,7 +30,8 @@
   
     
   
-  <meta name="description" content="As part of my current research with Prof. Chris Rycroft, I have been developing a large-scale simulation of thin, elastoplastic sheets to aid our study and analysis of crumpling dynamics. The simulation is implemented in C&#43;&#43; and multithreaded using OpenMP." />
+  <meta name="description" content="As part of my current research, I have been developing a large-scale simulation of thin, elastoplastic sheets to aid our study and analysis of crumpling dynamics.
+A popular model for elastic materials is a mass-spring system: a collection of discrete nodes that interact with their neighbors via linear springs." />
 
   
   <link rel="alternate" hreflang="en-us" href="https://jandrejevic12.github.io/project/crumpling_sim/" />
@@ -297,7 +298,8 @@
   <meta property="og:site_name" content="Academic" />
   <meta property="og:url" content="https://jandrejevic12.github.io/project/crumpling_sim/" />
   <meta property="og:title" content="Computational modeling of crumpling dynamics | Academic" />
-  <meta property="og:description" content="As part of my current research with Prof. Chris Rycroft, I have been developing a large-scale simulation of thin, elastoplastic sheets to aid our study and analysis of crumpling dynamics. The simulation is implemented in C&#43;&#43; and multithreaded using OpenMP." /><meta property="og:image" content="https://jandrejevic12.github.io/project/crumpling_sim/featured.jpg" />
+  <meta property="og:description" content="As part of my current research, I have been developing a large-scale simulation of thin, elastoplastic sheets to aid our study and analysis of crumpling dynamics.
+A popular model for elastic materials is a mass-spring system: a collection of discrete nodes that interact with their neighbors via linear springs." /><meta property="og:image" content="https://jandrejevic12.github.io/project/crumpling_sim/featured.jpg" />
     <meta property="twitter:image" content="https://jandrejevic12.github.io/project/crumpling_sim/featured.jpg" /><meta property="og:locale" content="en-us" />
   
     
@@ -352,7 +354,7 @@
       "url": "https://jandrejevic12.github.io/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_192x192_fill_lanczos_center_3.png"
     }
   },
-  "description": "As part of my current research with Prof. Chris Rycroft, I have been developing a large-scale simulation of thin, elastoplastic sheets to aid our study and analysis of crumpling dynamics. The simulation is implemented in C++ and multithreaded using OpenMP."
+  "description": "As part of my current research, I have been developing a large-scale simulation of thin, elastoplastic sheets to aid our study and analysis of crumpling dynamics.\nA popular model for elastic materials is a mass-spring system: a collection of discrete nodes that interact with their neighbors via linear springs."
 }
 </script>
 
@@ -803,7 +805,34 @@
   <div class="article-container">
 
     <div class="article-style">
-      <p>As part of my current research with Prof. Chris Rycroft, I have been developing a large-scale simulation of thin, elastoplastic sheets to aid our study and analysis of crumpling dynamics. The simulation is implemented in C++ and multithreaded using OpenMP. Specific components of the numerical implementation will be discussed separately; the video below demonstrates one example simulation of a thin sheet radially confined into a ball.</p>
+      <p>As part of my current research, I have been developing a large-scale simulation of thin, elastoplastic sheets to aid our study and analysis of crumpling dynamics.</p>
+<p>A popular model for elastic materials is a mass-spring system: a collection of discrete nodes that interact with their neighbors via linear springs. This simple framework can accurately reproduce continuum elastic properties of the material.</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<figure  >
+  <div class="d-flex justify-content-center">
+    <div class="w-100" ><img alt="" srcset="
+               /project/crumpling_sim/mass_spring_model_hu8b814f376e16fa40746302a2d0f11dce_822428_d7477de3b3547e64780ad5035c4fee71.png 400w,
+               /project/crumpling_sim/mass_spring_model_hu8b814f376e16fa40746302a2d0f11dce_822428_e4d5d25cb2b51b0089cbdbdf0bfd2f83.png 760w,
+               /project/crumpling_sim/mass_spring_model_hu8b814f376e16fa40746302a2d0f11dce_822428_1200x1200_fit_lanczos_3.png 1200w"
+               src="/project/crumpling_sim/mass_spring_model_hu8b814f376e16fa40746302a2d0f11dce_822428_d7477de3b3547e64780ad5035c4fee71.png"
+               width="760"
+               height="225"
+               loading="lazy" data-zoomable /></div>
+  </div></figure>
+<p>In our work, we build on the widely-used elastic membrane model of Seung and Nelson<sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup> and extend it to simulate self-avoiding, elastoplastic sheets. A key consideration in our implementation is the numerical procedure used to integrate the equations of motion for the sheet. We recognize that a sheet undergoing crumpling exhibits deformations on two different timescales: a slower timescale for wide-range smooth deformation, and a faster timescale for rapid buckling and local changes in velocity. This motivates two different formulations of the equations of motion: a quasistatic formulation in which acceleration is approximated as zero, and a dynamic formulation that retains acceleration as non-negligible. The quasistatic formulation may be efficiently integrated using an implicit scheme, while the dynamic formulation is handled explicitly. The complete model is implemented in C++ and multithreaded using OpenMP, and a paper for this work is currently in preparation.</p>
 
 
 
@@ -822,7 +851,15 @@
 <video controls  >
   <source src="/project/crumpling_sim/radial_crumple.mp4" type="video/mp4">
 </video>
-<p>The sheet is modeled as a triangulated lattice of discrete nodes which interact with their neighbors via stretching, bending, and damping forces. The example shown consists of 46767 nodes and 92716 triangles distributed randomly in a square domain. The sheet is compressed by a radial potential that mimics a spherical shell with decreasing radius. Short-range repulsive forces enforce the sheet’s self-avoidance, and plastic damage accumulates as regions of the sheet develop a large enough local curvature. Particularly interesting is the observation of individual snap-throughs of flat surfaces as the sheet locks in creases. The cross-sectional view midway through the video also reveals a high degree of layering of the sheet. After compressing for a time, the radius of the enclosing shell begins to increase, allowing the crumpled sheet to relax. The relaxed state of the sheet displays permanent plastic damage.</p>
+<p>The video above demonstrates one example simulation of a thin sheet radially confined into a ball. The sheet is modeled by 46767 nodes and 92716 triangles distributed randomly in a square domain. The sheet is compressed by a radial potential that mimics a spherical shell with decreasing radius. Short-range repulsive forces enforce the sheet’s self-avoidance, and plastic damage accumulates as regions of the sheet develop a large enough local curvature. Particularly interesting is the observation of individual snap-throughs of flat surfaces as the sheet locks in creases. The cross-sectional view midway through the video also reveals a high degree of layering of the sheet. After compressing for a time, the radius of the enclosing shell begins to increase, allowing the crumpled sheet to relax. At the end, the relaxed state of the sheet displays permanent plastic damage.</p>
+<section class="footnotes" role="doc-endnotes">
+<hr>
+<ol>
+<li id="fn:1" role="doc-endnote">
+<p>Seung, Hyunjune Sebastian, and David R. Nelson. &ldquo;Defects in flexible membranes with crystalline order.&rdquo; <em>Physical Review A</em> 38.2 (1988): 1005.&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
+</li>
+</ol>
+</section>
 
     </div>
 
